# Space-Invaders

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  LICENSE  README.md  main.cpp
Algorithms/Levels/: level1.cpp  level2.cpp
Classes/: Bullet.cpp  Bullet.hpp  ColorsDraw.cpp  Enemy.cpp  Enemy.hpp  GameObject.cpp  GameObject.hpp  Player.cpp  Player.hpp
algorithms/levels/: level3.txt
docs/: documentation.md
header/: Barrier.hpp  Bullet.hpp  ColorsDraw.hpp  Enemy.hpp  Game.hpp  GameObject.hpp  Player.hpp
source/: Barrier.cpp  Bullet.cpp  ColorsDraw.cpp  Enemy.cpp  Game.cpp  GameObject.cpp  Player.cpp
